fix: endpoint request
